--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "celebrate": "^12.1.1",
     "cors": "^2.8.5",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.9",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
@@ -28,9 +32,12 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/hapi__joi": "^17.1.3",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
+    "@types/nodemailer": "^6.4.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^6.8.0",
