--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,16 @@
-.vscode/
-node_modules/
-build/
+.vscode
+node_modules
+build
 
+# TEMP FOLDER
 tmp/*
 !tmp/.gitkeep
 
-coverage/
+# TEST
+coverage
+
+# ENV
+.env
+
+# DATABASE
+ormconfig.json
