--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,13 +1,13 @@
-.vscode
-node_modules
-build
+.vscode/
+node_modules/
+build/
 
 # TEMP FOLDER
 tmp/*
 !tmp/.gitkeep
 
 # TEST
-coverage
+coverage/
 
 # ENV
 .env
