--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,11 @@
-APP_SECRET =
-APP_WEB_URL = http://localhost:3000
+# URLs
 APP_API_URL = http://localhost:3333
+APP_WEB_URL = http://localhost:3000
+
+# JWT
+APP_SECRET =
+
+# REDIS
+REDIS_HOST =
+REDIS_PORT =
+REDIS_PASS =
