--- a/backend/package.json
+++ b/backend/package.json
@@ -20,11 +20,13 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.0.2",
+    "rate-limiter-flexible": "^2.1.7",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.24",
@@ -35,6 +37,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/hapi__joi": "^17.1.3",
+    "@types/ioredis": "^4.16.7",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mongodb": "^3.5.25",
