--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -37,6 +37,7 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "no-unused-expressions": "off",
+    "import/no-duplicates": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       { 
