--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "env": {
-    "es6": true
+    "es6": true,
+    "browser": true
   },
   "extends": [
     "plugin:react/recommended",
@@ -36,6 +37,8 @@
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "no-unused-expressions": "off",
+    "import/no-duplicates": "off",
+    "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       { 
