--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "extends": [
     "plugin:react/recommended",
@@ -38,6 +39,7 @@
     "react/jsx-props-no-spreading": "off",
     "no-unused-expressions": "off",
     "import/no-duplicates": "off",
+    "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       { 
