--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "es6": true,
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "extends": [
     "plugin:react/recommended",
@@ -38,6 +39,7 @@
     "react/jsx-props-no-spreading": "off",
     "no-unused-expressions": "off",
     "import/no-duplicates": "off",
+    "import/no-extraneous-dependencies": "off",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/explicit-function-return-type": [
       "error",
