chore: update .env

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,10 @@ APP_SECRET =
 REDIS_HOST =
 REDIS_PORT =
 REDIS_PASS =
+
+# MAIL
+MAIL_DRIVER = ethereal
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
